@@ -8170,11 +8170,6 @@ SCIP_Real SCIPgetPresolvingTime(
 /**@name Numerical Methods */
 /**@{ */
 
-/** returns value treated as infinity */
-extern
-SCIP_Real SCIPinfinity(
-   SCIP*                 scip                /**< SCIP data structure */
-   );
 
 /** returns value treated as zero */
 extern
@@ -8246,6 +8241,12 @@ void SCIPmarkLimitChanged(
  * In optimized mode, the methods are implemented as defines to improve performance.
  * However, we want to have them in the library anyways, so we have to undef the defines.
  */
+
+/** returns value treated as infinity */
+extern
+SCIP_Real SCIPinfinity(
+   SCIP*                 scip                /**< SCIP data structure */
+   );
 
 /** checks, if values are in range of epsilon */
 extern
@@ -8644,12 +8645,26 @@ SCIP_Bool SCIPisUpdateUnreliable(
    SCIP_Real             oldvalue            /**< old value, i.e., last reliable value */
    );
 
+/** checks, if value is huge and should be handled separately (e.g., in activity computation) */
+extern
+SCIP_Bool SCIPisHugeValue(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_Real             val                 /**< value to be checked whether it is huge */
+   );
+
+/** returns the minimum value that is regarded as huge and should be handled separately (e.g., in activity computation) */
+extern
+SCIP_Bool SCIPgetHugeValue(
+   SCIP*                 scip                /**< SCIP data structure */
+   );
+
 #else
 
 /* In optimized mode, the methods are implemented as defines to reduce the number of function calls and
  * speed up the algorithms.
  */
 
+#define SCIPinfinity(scip)                        SCIPsetInfinity((scip)->set)
 #define SCIPisInfinity(scip, val)                 SCIPsetIsInfinity((scip)->set, val)        
 #define SCIPisEQ(scip, val1, val2)                SCIPsetIsEQ((scip)->set, val1, val2)       
 #define SCIPisLT(scip, val1, val2)                SCIPsetIsLT((scip)->set, val1, val2)       
@@ -8708,6 +8723,8 @@ SCIP_Bool SCIPisUpdateUnreliable(
 #define SCIPisSumRelGE(scip, val1, val2)          SCIPsetIsSumRelGE((scip)->set, val1, val2) 
 
 #define SCIPisUpdateUnreliable(scip, newval, oldval) SCIPsetIsUpdateUnreliable((scip)->set, newval, oldval)
+#define SCIPisHugeValue(scip, val) SCIPsetIsHugeValue((scip)->set, val)
+#define SCIPgetHugeValue(scip) SCIPsetGetHugeValue((scip)->set)
 #endif
 
 /** outputs a real number, or "+infinity", or "-infinity" to a file */
