@@ -79,6 +79,8 @@ interface
   SCIPrespropCons(), SCIPenfopsCons(), SCIPenfolpCons()
 - added new stages SCIP_STAGE_INITPRESOLVE, SCIP_STAGE_EXITPRESOLVE, and SCIP_STAGE_FREE; renamed SCIP_STAGE_FREESOLVE
   to SCIP_STAGE_EXITSOLVE
+- new method SCIPisHugeValue() to check whether a value is huge and should be handled separately from other values
+  (e.g., in activity computations), and SCIPgetHugeValue() to get the smallest value counting as huge
 
 performance improvements:
 - improved scaling of linear constraints, linear constraints with integral variables will now be scale with
@@ -141,13 +143,14 @@ parameters:
 - new parameters constraints/indicator/{sepacouplingcuts,sepacouplinglocal} to enable separation of (local) cuts
 - new parameters constraints/indicator/{maxsepacuts,maxsepacutsroot} to restrict the number of separated cuts
 - new parameter separating/oddcycle/maxunsucessfull to automatically turn off separation
-- new parameter misc/num_recompfac which denotes the factor, by which the absolute of an iteratively updated value has
+- new parameter numerics/recompfac which denotes the factor, by which the absolute of an iteratively updated value has
   to be decreased in order to recompute the value from scratch
 - new parameters separating/cgmip/{minnodelimit,maxnodelimit} to determine node limit. Removed parameter 
   separating/cgmip/nodelimit.
 - new parameter <presolving/gateextraction/onlysetpart> by default is set to FALSE, that parameter allows you to
   only extract set-partitioning and no and-constraints
 - new parameter oncepernode in Rounding and Simple Rounding heuristic
+- new parameter <numerics/hugeval> that defines the smalles value counting as huge (see new method SCIPisHugeValue())
 
 features:
 - SCIPcomputeLPRelIntPoint with normtype='s' now uses homogenized LP for computing rel.int. point too and allow to
